--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,4 @@
 <app-heroes-list></app-heroes-list>
  -->
 
-<app-dbz-main-page></app-dbz-main-page>
+<!-- <app-dbz-main-page></app-dbz-main-page> -->
